Refactor tests and add StockTest for improved coverage
Refactored test formatting for consistency and readability across OrderServiceTest, ProductServiceTest, ProductTypeTest, and CafeKioskTest. Added parameterized and dynamic tests to ProductTypeTest and StockTest for more comprehensive coverage. Introduced a new StockTest class to validate stock deduction logic and exception handling.