@@ -14,62 +14,70 @@ import java.time.LocalDateTime;
 
 class CafeKioskTest {
 
-	@Test
-	@DisplayName("음료 1개를 추가하면 주문 목록에 담긴다.")
-	void add() {
-		CafeKiosk cafeKiosk = new CafeKiosk();
-		cafeKiosk.add(new Americano());
-		Assertions.assertEquals(1, cafeKiosk.getBeverages().size());
-	}
+    @Test
+    @DisplayName("음료 1개를 추가하면 주문 목록에 담긴다.")
+    void add() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        cafeKiosk.add(new Americano());
+        Assertions.assertEquals(1, cafeKiosk.getBeverages()
+            .size());
+    }
 
-	@Test
-	@DisplayName("음료 1개를 수동으로 추가하면 주문 목록에 담긴다.")
-	void addManualTest() {
-		CafeKiosk cafeKiosk = new CafeKiosk();
-		cafeKiosk.add(new Americano());
-		assertThat(cafeKiosk.getBeverages().getFirst().getName()).isEqualTo("Americano");
-		assertThat(cafeKiosk.getBeverages().size()).isEqualTo(1);
-	}
+    @Test
+    @DisplayName("음료 1개를 수동으로 추가하면 주문 목록에 담긴다.")
+    void addManualTest() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        cafeKiosk.add(new Americano());
+        assertThat(cafeKiosk.getBeverages()
+            .getFirst()
+            .getName()).isEqualTo("Americano");
+        assertThat(cafeKiosk.getBeverages()
+            .size()).isEqualTo(1);
+    }
 
-	@Test
-	void addSeveralBeverage() {
-		CafeKiosk cafeKiosk = new CafeKiosk();
-		Americano americano = new Americano();
+    @Test
+    void addSeveralBeverage() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        Americano americano = new Americano();
 
-		cafeKiosk.add(americano);
+        cafeKiosk.add(americano);
 
-		assertThat(cafeKiosk.getBeverages().size()).isEqualTo(1);
-	}
+        assertThat(cafeKiosk.getBeverages()
+            .size()).isEqualTo(1);
+    }
 
-	@Test
-	void calculateTotalPrice() {
-		CafeKiosk cafeKiosk = new CafeKiosk();
-		cafeKiosk.add(new Americano());
-		cafeKiosk.add(new Latte());
+    @Test
+    void calculateTotalPrice() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        cafeKiosk.add(new Americano());
+        cafeKiosk.add(new Latte());
 
-		int totalPrice = cafeKiosk.calculateTotalPrice();
+        int totalPrice = cafeKiosk.calculateTotalPrice();
 
-		assertThat(totalPrice).isEqualTo(7000);
-	}
+        assertThat(totalPrice).isEqualTo(7000);
+    }
 
-	@Test
-	void createOrderOpenTime() {
-		CafeKiosk cafeKiosk = new CafeKiosk();
-		cafeKiosk.add(new Americano());
+    @Test
+    void createOrderOpenTime() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        cafeKiosk.add(new Americano());
 
-		Order order = cafeKiosk.createOrder(LocalDateTime.of(2025, 8, 13, 10, 0));
+        Order order = cafeKiosk.createOrder(LocalDateTime.of(2025, 8, 13, 10, 0));
 
-		assertThat(order).isNotNull();
-		assertThat(order.getBeverages().get(0).getName()).isEqualTo("Americano");
-	}
+        assertThat(order).isNotNull();
+        assertThat(order.getBeverages()
+            .getFirst()
+            .getName()).isEqualTo("Americano");
+    }
 
-	@Test
-	void createOrderOutsideOpenTime() {
-		CafeKiosk cafeKiosk = new CafeKiosk();
-		cafeKiosk.add(new Americano());
+    @Test
+    void createOrderOutsideOpenTime() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        cafeKiosk.add(new Americano());
 
-		assertThatThrownBy(() -> cafeKiosk.createOrder(LocalDateTime.of(2025, 8, 13, 9, 59)))
-				.isInstanceOf(IllegalStateException.class)
-				.hasMessage("The shop is closed.");
-	}
+        assertThatThrownBy(
+            () -> cafeKiosk.createOrder(LocalDateTime.of(2025, 8, 13, 9, 59)))
+            .isInstanceOf(IllegalStateException.class)
+            .hasMessage("The shop is closed.");
+    }
 }
